--- a/TestFramework/GNUmakefile.in
+++ b/TestFramework/GNUmakefile.in
@@ -8,6 +8,8 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 TEST_TOOL_NAME = @TESTNAMES@
 
+ADDITIONAL_CPPFLAGS += -I$(GNUSTEP_MAKEFILES)/TestFramework
+
 ifeq ($(gcov),yes)
 ADDITIONAL_OBJCFLAGS += -ftest-coverage -fprofile-arcs
 ADDITIONAL_OBJCCFLAGS += -ftest-coverage -fprofile-arcs
@@ -24,5 +26,6 @@ include $(GNUSTEP_MAKEFILES)/test-tool.make
 
 after-clean::
 	rm -f core core.* *.core \
+	test_*.out test_*.err \
 	tests.log tests.sum oldtests.log oldtests.sum
 
