--- a/TestFramework/gnustep-tests.in
+++ b/TestFramework/gnustep-tests.in
@@ -77,6 +77,9 @@ do
     --sequential)
       GSSEQUENTIAL=yes
       ;;
+    --notimestamps)
+      GSTEST_TS=0
+      ;;
     --verbose)
       GSVERBOSE=yes
       ;;
@@ -96,6 +99,7 @@ do
       echo "Use 'gnustep-tests --developer' to treat hopes as real tests."
       echo "Use 'gnustep-tests --verbose' for full/detailed log output."
       echo "Use 'gnustep-tests --sequential' to disable parallel building."
+      echo "Use 'gnustep-tests --notimestamps' to disable testcase timestamps."
       echo
       echo "Interpreting the output"
       echo "-----------------------"
@@ -154,18 +158,23 @@ else
   OBJCXX=
 fi
 
-GSTESTFLAGS=
+if test x"$GSTEST_TS" = x"0"
+then
+  GSTESTFLAGS="-DTEST_TS=0"
+else
+  GSTESTFLAGS="-DTEST_TS=1"
+fi
 if test "$GSTESTMODE" = "failfast"
 then
   if test x"$GSTESTDEV" = x"yes"
   then
-    GSTESTFLAGS="-DTESTDEV=1 -DFAILFAST=1"
+    GSTESTFLAGS="$GSTESTFLAGS -DTESTDEV=1 -DFAILFAST=1"
   else
-    GSTESTFLAGS="-DFAILFAST=1"
+    GSTESTFLAGS="$GSTESTFLAGS -DFAILFAST=1"
   fi
 elif test x"$GSTESTDEV" = x"yes"
 then
-  GSTESTFLAGS="-DTESTDEV=1"
+  GSTESTFLAGS="$GSTESTFLAGS -DTESTDEV=1"
 fi
 
 if test x"$GSTESTFLAGS" != x
@@ -278,9 +287,15 @@ extract()
   shift
   while test $# != 0
   do
-    grep "$1" "$f"
+    grep -a "$1" "$f"
     shift
   done
+}
+
+# Get the name of a test from its file name
+getname()
+{
+  TESTNAME=`echo $1 | sed -e"s/^\(test^.]*\)$/\1.obj./;s/\.[^.]*//g"`
 }
 
 # Function for platforms where grep can't search for multiple patterns.
@@ -290,7 +305,7 @@ present()
   shift
   while test $# != 0
   do
-    grep "$1" "$f" >/dev/null
+    grep -a "$1" "$f" >/dev/null
     if test $? = "0"
     then
       return 0
@@ -300,20 +315,25 @@ present()
   return 1
 }
 
-# Low level function to build and run the Objective-C program $TESTFILE
-# in the current directory.  The TEMPLATE variable must already be set
-# to the name of the make file template if gnustep-make is to do the
-# building.
+# Low level function to build the Objective-C program $TESTFILE
+# in the current directory.  The TEMPLATE variable must already
+# be set to the name of the make file template if gnustep-make
+# is to do the building.
 # 
-build_and_run ()
+build_test ()
 {
+  # The argument to this function is the name of a test file.
   # Remove the extension, if there is one. If there is no extension, add
   # .obj .
-  TESTNAME=`echo $TESTFILE | sed -e"s/^\(test^.]*\)$/\1.obj./;s/\.[^.]*//g"`
+  local TESTFILE=$1
+  local TESTNAME=`echo $TESTFILE | sed -e"s/^\(test^.]*\)$/\1.obj./;s/\.[^.]*//g"`
+  local BUILD_STATUS
+  local BUILD_CMD
+  local tmp
 
-  # Run the test.
+  # Build the test.
+  echo "Building $TESTNAME"
 
-  RUN_CMD="./obj/$TESTNAME"
   if test x"$TEMPLATE" = x
   then
     # The very simple case, we just need to compile a single file
@@ -349,32 +369,42 @@ build_and_run ()
     fi
   fi
 
-  # Compile it if necessary.
   # Redirect errors to stdout so it shows up in the log,
   # but not in the summary.
-  if test "$NEEDBUILD" = "yes"
+  echo "Building $dir/$TESTFILE"
+  echo "$BUILD_CMD"
+  if test -r ./make-check.env
   then
-    echo "Building $dir/$TESTFILE"
-    echo "$BUILD_CMD"
-    if test -r ./make-check.env
-    then
-      ( . ./make-check.env; . ./TestInfo; $BUILD_CMD) 2>&1
-    else
-      ( . ./TestInfo; $BUILD_CMD) 2>&1
-    fi
-    BUILDSTATUS=$?
+    ( . ./make-check.env; . ./TestInfo > /dev/null 2>&1; $BUILD_CMD) 2>&1
   else
-    BUILDSTATUS=0
+    ( . ./TestInfo > /dev/null 2>&1; $BUILD_CMD) 2>&1
   fi
 
-  if test $BUILDSTATUS != 0
+  if test $? != 0
   then
+    rm -f ./obj/$TESTNAME
     echo "Failed build:     $1" >&2
     if test "$GSTESTMODE" = "failfast"
     then
       return 1
     fi
-  else
+  fi
+  return 0
+}
+
+run_test ()
+{
+  # Remove the extension, if there is one. If there is no extension, add
+  # .obj .
+  local TESTFILE=$1
+  local TESTNAME=$2
+
+  # Run the test.
+
+  local RUN_CMD="./obj/$TESTNAME"
+
+  if test -x $RUN_CMD
+  then
     # We want aggressive memory checking.
 
     # Tell glibc to check for malloc errors, and to crash if it detects
@@ -399,13 +429,14 @@ build_and_run ()
     else
       if test -r ./make-check.env
       then
-        ( . ./make-check.env; . ./TestInfo; $RUN_CMD )
+        ( . ./make-check.env; . ./TestInfo > /dev/null 2>&1; $RUN_CMD )
       else
-        ( . ./TestInfo; $RUN_CMD )
+        ( . ./TestInfo > /dev/null 2>&1; $RUN_CMD )
       fi
     fi
 
-    if test $? != 0
+    result=$?
+    if test $result != 0
     then
       if test -r $TESTFILE.abort
       then
@@ -420,36 +451,55 @@ build_and_run ()
     else
       echo "Completed file:  $TESTFILE" >&2
     fi
+  else
+    echo "Skipped (not built) file:  $TESTFILE" >&2
   fi
   return 0
 }
 
-# Function to build and run $TESTFILE in the current directory.
-# This actually manages the logging process and calls build_and_run
-# to perform the work.
-#
-run_test_file ()
-{
-  RUNEXIT=0
 
-  echo >> $GSTESTLOG
-  echo Testing $TESTFILE... >> $GSTESTLOG
-  echo >> $GSTESTSUM
+run_test_log ()
+{
+  local TESTFILE=$1
+  local TESTNAME=$2
+  local TESTLOG=$3
+  local TESTVRB=$4
+
+  # Create temporary files
+  touch $TESTVRB
+  echo Testing $TESTFILE... > $TESTLOG
 
   if test x"$GSVERBOSE" = xyes
   then
-    build_and_run 2>&1 | tee $GSTESTLOG.tmp
+    run_test $TESTFILE $TESTNAME 2>&1 | tee -a $TESTLOG >> $TESTVRB
   else
-    build_and_run > $GSTESTLOG.tmp 2>&1
+    run_test $TESTFILE $TESTNAME >> $TESTLOG 2>&1
   fi
-  RUNEXIT=$?
+  result=$?
+  if test "$result" != "0"
+  then
+    if test "$GSTESTMODE" = "failfast"
+    then
+      RUNEXIT=1
+    fi
+  fi
+}
 
-  # Add the information to the detailed log.
-  cat $GSTESTLOG.tmp >> $GSTESTLOG
+proc_test_log ()
+{
+  local TESTFILE=$1
+  local TESTNAME=$2
+  local TESTLOG=$3
+  local TESTVRB=$4
 
   # Extract the summary information and add it to the summary file.
-  extract $GSTESTLOG.tmp "^Passed test:" "^Failed test:" "^Failed build:" "^Completed file:" "^Failed file:" "^Dashed hope:" "^Failed set:" "^Skipped set:" > $GSTESTSUM.tmp
+  extract $TESTLOG "^Passed test:" "^Failed test:" "^Failed build:" "^Completed file:" "^Failed file:" "^Dashed hope:" "^Failed set:" "^Skipped set:" > $GSTESTSUM.tmp
   cat $GSTESTSUM.tmp >> $GSTESTSUM
+
+  cat $TESTLOG >> $GSTESTLOG
+  rm -f $TESTLOG
+  cat $TESTVRB
+  rm -f $TESTVRB
 
   # If there were failures or skipped tests then report them...
   if present $GSTESTSUM.tmp "^Failed build:" "^Failed file:" "^Failed set:" "^Failed test:" "^Skipped set:"
@@ -457,24 +507,31 @@ run_test_file ()
     echo
     echo $dir/$TESTFILE:
     extract $GSTESTSUM.tmp "^Failed build:" "^Failed file:" "^Failed set:" "^Failed test:" "^Skipped set:"
+    if test "$GSTESTMODE" = "failfast"
+    then
+      RUNEXIT=1
+    fi
+  else
+    RUNEXIT=0
   fi
 
   if test x"$GSTESTDBG" != x
   then
+    DEBUGGER=`gnustep-config --variable=DEBUGGER`
+    EXT=`gnustep-config --variable=EXEEXT`
     if present "$GSTESTSUM.tmp" "^Failed test:"
     then
-      grep '^Failed test:' "$GSTESTLOG.tmp" | sed -e 's/^Failed test:[^:]*:\([0-9][0-9]*\).*/break testStart if testLineNumber==\1/' > "$GSTESTDBG"
-      gdb "./obj/$TESTNAME" -x "$GSTESTDBG"
+      grep -a '^Failed test:' "$GSTESTLOG.tmp" | sed -e 's/^Failed test:[^:]*:\([0-9][0-9]*\).*/break testStart if testLineNumber==\1/' > "$GSTESTDBG"
+      $DEBUGGER "./obj/$TESTNAME"$EXT -x "$GSTESTDBG"
       rm -f "$GSTESTDBG"
     elif present "$GSTESTSUM.tmp" "^Failed file:"
     then
-      gdb "./obj/$TESTNAME"
+      $DEBUGGER "./obj/$TESTNAME"$EXT
     fi
   fi
 
-  return $RUNEXIT
+  return 0
 }
-
 
 # Replace the old files.
 if test -f tests.log
@@ -551,7 +608,7 @@ do
       then
         $MAKE_CMD clean >/dev/null 2>&1
       fi
-      rm -rf core core.* *.core obj GNUmakefile gdb.cmds tests.log tests.sum oldtests.log oldtests.sum tests.tmp tests.sum.tmp tests.log.tmp make-check.mak make-check.env
+      rm -rf core core.* *.core obj GNUmakefile gdb.cmds test_*.err test_*.out tests.log tests.sum oldtests.log oldtests.sum tests.tmp tests.sum.tmp tests.log.tmp make-check.mak make-check.env
 
     else
       echo "--- Running tests in $dir ---"
@@ -613,7 +670,6 @@ do
           TEMPLATE=$GSTESTTOP/GNUmakefile.in
         fi
 
-        NEEDBUILD=yes
         if test x"$TEMPLATE" = x
         then
           rm -rf core core.* *.core obj GNUmakefile gdb.cmds
@@ -650,33 +706,121 @@ ${tmp}_OBJC_FILES=$TESTFILE"
           sed -e "s/@TESTNAMES@/$TESTNAMES/;s^@TESTOPTS@^$GSTESTOPTS^;s/@TESTRULES@/$TESTRULES/" < "$TEMPLATE" > GNUmakefile
           $MAKE_CMD clean >/dev/null 2>&1
 
-          # Try building all the test files in the directory in parallel.
-          # If that works, set NEEDBUILD to 'no' so that we do not build
-          # each individual test file later.
-          echo "" >>$GSTESTLOG
-          echo "Building in $dir" >>$GSTESTLOG
-          if test -r ./make-check.env
+          if test x"$GSSEQUENTIAL" = xyes
           then
-            ( . ./make-check.env; . ./TestInfo; $MAKE_CMD -j 4 debug=yes) >>$GSTESTLOG 2>&1
+            build_state=1
           else
-            ( . ./TestInfo; $MAKE_CMD -j 4 debug=yes) >>$GSTESTLOG 2>&1
+            # Try building all the test files in the directory in parallel.
+            # If that fails, try building them individually.
+            echo "" >>$GSTESTLOG
+            echo "Building in $dir" >>$GSTESTLOG
+            if test -r ./make-check.env
+            then
+              ( . ./make-check.env; . ./TestInfo > /dev/null 2>&1; $MAKE_CMD -j 4 debug=yes) >>$GSTESTLOG 2>&1
+            else
+              ( . ./TestInfo > /dev/null 2>&1; $MAKE_CMD -j 4 debug=yes) >>$GSTESTLOG 2>&1
+            fi
+            build_state=$?
           fi
-          if test $? = 0
+          if test $build_state != 0
           then
-            NEEDBUILD=no
+            for TESTFILE in $TESTS
+            do
+              build_test "$TESTFILE"
+            done
           fi
         fi
 
-        # Now we process each test file in turn.
-        # When cleaning, we only need to do one clean per directory.
+        # Build up a list of the names of all the tests available.
+        declare -A TESTMAP
+        ALLTESTS=""
         for TESTFILE in $TESTS
         do
-          run_test_file
-          if test "$RUNEXIT" != "0"
+          getname $TESTFILE
+          TESTMAP["$TESTNAME"]="$TESTFILE"
+          if test "$ALLTESTS" = ""
           then
-            break
+            ALLTESTS="$TESTNAME"
+          else
+            ALLTESTS="$ALLTESTS $TESTNAME"
           fi
         done
+
+        # Get the values defined for PARALLEL and PARALLEL in TestInfo
+        # These variables should specify the names of sets of tests to
+        # be executed in parallel or sequentially respectively.
+        GSPAR=`( . ./TestInfo > /dev/null 2>&1; echo "$PARALLEL") 2>&1`
+        GSSEQ=`( . ./TestInfo > /dev/null 2>&1; echo "$SEQUENCE") 2>&1`
+
+        # When PARALLEL and SEQUENCE are both missing or empty, we treat
+        # it as if SEQUENCE had been set to contain an asterisk so that
+        # all the tests are executed in order.
+        if test "$GSPAR" = "" -a "$GSSEQ" = ""
+        then
+          GSSEQ="*"
+        fi
+
+        # Any occurrence of an asterisk in PARALLEL or SEQUENCE is replaced
+        # by the names of all the tests separated by white space.
+        GSPAR=`echo "$GSPAR" | sed -e "s/\*/ $ALLTESTS /g"`
+        GSSEQ=`echo "$GSSEQ" | sed -e "s/\*/ $ALLTESTS /g"`
+
+        # NB. we check the map to see that a file exists for each test name
+        # because the names we have been given may not exist in the set of
+        # tests being run (ie specified at the cvommand line).
+
+        # Now we process sequence test file in turn.
+        i=0
+        for TESTNAME in $GSSEQ
+        do
+          TESTFILE=${TESTMAP[$TESTNAME]}
+          if test "$TESTFILE" != ""
+          then
+            if test x"$GSVERBOSE" = xyes
+            then
+              echo "Sequence perform $TESTNAME"
+            fi
+            run_test_log $TESTFILE $TESTNAME test_$i.out test_$i.err
+            proc_test_log $TESTFILE $TESTNAME test_$i.out test_$i.err
+            if test "$RUNEXIT" != "0"
+            then
+	      break
+            fi
+            ((i+=1))
+          fi
+        done
+
+        # And process all parallel test files together
+        i=0
+        for TESTNAME in $GSPAR
+        do
+          TESTFILE=${TESTMAP[$TESTNAME]}
+          if test "$TESTFILE" != ""
+          then
+            if test x"$GSVERBOSE" = xyes
+            then
+              echo "Parallel startup $TESTNAME"
+            fi
+            run_test_log $TESTFILE $TESTNAME test_$i.out test_$i.err &
+            ((i+=1))
+          fi
+        done
+        wait
+        i=0
+        for TESTNAME in $GSPAR
+        do
+          TESTFILE=${TESTMAP[$TESTNAME]}
+          if test "$TESTFILE" != ""
+          then
+            proc_test_log $TESTFILE $TESTNAME test_$i.out test_$i.err
+            if test "$RUNEXIT" != "0"
+            then
+              break
+            fi
+            ((i+=1))
+          fi
+        done
+
       else
         echo "Start.sh failed in '$TESTDIR' ... tests abandoned."
         for TESTFILE in $TESTS
@@ -735,7 +879,7 @@ fi
 
 if test "$GSTESTMODE" = "clean"
 then
-  rm -rf core core.* *.core obj GNUmakefile.tmp gdb.cmds tests.tmp tests.sum.tmp tests.log.tmp tests.log tests.sum oldtests.log oldtests.sum
+  rm -rf core core.* *.core obj GNUmakefile.tmp gdb.cmds test_*.err test_*.out tests.tmp tests.sum.tmp tests.log.tmp tests.log tests.sum oldtests.log oldtests.sum
 else
   # Make some stats.
   if test -r tests.sum
@@ -774,7 +918,7 @@ $RUNCMD
 FAILS=$?
 
 # Delete the temporary file.
-rm -f tests.tmp tests.sum.tmp tests.log.tmp
+rm -f test_*.err test_*.out tests.tmp tests.sum.tmp tests.log.tmp
 
 # Our exit status is 0 unless some test failed.
 if test -r "$GSTESTSUM"
