--- a/debian/control
+++ b/debian/control
@@ -1,20 +1,20 @@
 Source: gnustep-make
-Maintainer: Deepin Developer <deepin-dev@deepin.org>
-Uploaders: Deepin Packages Builder <packages@deepin.org>
-           Gürkan Myczko <gurkan@phys.ethz.ch>,
+Maintainer: Debian GNUstep maintainers <pkg-gnustep-maintainers@lists.alioth.debian.org>
+Uploaders: Eric Heintzmann <heintzmann.eric@free.fr>,
+           Gürkan Myczko <tar@debian.org>,
            Yavor Doganov <yavor@gnu.org>
 Section: gnustep
 Priority: optional
-Build-Depends: debhelper (>= 12),
+Build-Depends: debhelper-compat (= 13),
                gobjc++,
                pkg-config
-Build-Depends-Indep: texinfo,
-                     texlive-base,
-                     texlive-latex-base
+Build-Depends-Indep: texinfo <!nodoc>,
+                     texlive-base <!nodoc>,
+                     texlive-latex-base <!nodoc>
 Rules-Requires-Root: no
-Standards-Version: 4.5.0
-#Vcs-Browser
-#Vcs-Git
+Standards-Version: 4.6.2
+Vcs-Browser: https://salsa.debian.org/gnustep-team/gnustep-make
+Vcs-Git: https://salsa.debian.org/gnustep-team/gnustep-make.git
 Homepage: http://gnustep.org
 
 Package: gnustep-common
@@ -42,6 +42,7 @@ Description: GNUstep build system
 
 Package: gnustep-make-doc
 Architecture: all
+Build-Profiles: <!nodoc>
 Multi-Arch: foreign
 Section: doc
 Depends: ${misc:Depends}
